# MailFlow

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
MessageManagement/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
MessageManagement/migrations/: 0001_initial.py  0002_initial.py  0003_alter_message_options.py
MessageManagement/templates/MessageManagement/: messages_confirm_delete.html  messages_detail.html  messages_form.html  messages_list.html
config/: settings.py  urls.py
mailings/: __init__.py  admin.py  forms.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
mailings/management/commands/: manual_sending.py
mailings/migrations/: 0001_initial.py  0002_initial.py  0003_alter_mailing_options.py
mailings/templates/includes/: base.html  content.html  inc_footer.html  inc_menu.html  inc_paginator.html  inc_topbar.html
mailings/templates/mailings/: home.html  mailing_attempts.html  mailings_confirm_delete.html  mailings_detail.html  mailings_form.html  mailings_list.html
nginx/: Dockerfile  nginx.conf
recipients/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
recipients/migrations/: 0001_initial.py  0002_initial.py  0003_alter_recipient_options.py
recipients/templates/recipients/: recipients_confirm_delete.html  (+3 more)
static/css/: sb-admin-2.css
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/: login.html
(+7 files in other folders)
